# lambda-dfs-rs

./: .gitignore  Cargo.toml  README.md
src/: event_handler.rs  main.rs  s3.rs
