[package]
name = "lambda-dfs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = { version = "1.106.0", features = ["test-util"] }
arrow = "56.1.0"
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
arrow-schema = "56.1.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
  "sqs",
] }
chrono = "0.4.42"
iceberg = "0.6.0"
iceberg-catalog-rest = "0.6.0"

lambda_runtime = "0.13.0"
parquet = "56.1.0"
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
aws-smithy-mocks = "0.2.1"
